Fix text's alignment in story popup

--- a/src/components/StoryPopup/style.css
+++ b/src/components/StoryPopup/style.css
@@ -235,6 +235,7 @@
   margin: 0 0.5rem;
   width: calc(100% / 3 * 2);
   flex-grow:1;
+  text-align:left;
 }
 .columnRight section {
   position: relative;
